# mandelbrot_renderer

./: .gitignore  CMakeLists.txt  README.md
include/: calculate.h  config.h  fixedPoint.h  fixed_t_calc.h  mandelbrotRenderer.h
src/: fixedPoint.cpp  fixed_t_calc.cpp  main.cpp  mandelbrotRenderer.cpp
